# picorabbit

./: .gitmodules  CMakeLists.txt  Gemfile  LICENSE.md  README.md  Rakefile
.cursor/rules/: raspberry-pi-pico-c.mdc
build_config/: picorabbit-mruby-cortex-m33.rb  picorabbit-test.rb
include/: clock.h  draw.h  draw_text.h  dvi.h  dvi_defines.h  dvi_timing_1280x720p60.h  dvi_timing_640x480p60.h  dvi_timing_720x480p60.h  framebuffer.h  hardware_interface.h  image.h  line_buffer.h  linebuffer.h  main_task.h  text_renderer.h
mrbgems/mruby-pico-gpio/: mrbgem.rake
mrbgems/mruby-pico-gpio/include/: gpio.h
mrbgems/mruby-pico-gpio/mrblib/: gpio.rb
mrbgems/mruby-pico-gpio/src/: gpio.c
mrbgems/mruby-pico-memory-usage/: mrbgem.rake
mrbgems/mruby-pico-memory-usage/include/: memory_usage.h
mrbgems/mruby-pico-memory-usage/src/: mrb_pico_memory_usage.c
mrbgems/mruby-pico-print/: mrbgem.rake
mrbgems/mruby-pico-print/src/: pico_print.c
mrbgems/mruby-pico-time/: mrbgem.rake
mrbgems/mruby-pico-time/include/: pico_time.h
mrbgems/mruby-picorabbit/: mrbgem.rake
mrbgems/mruby-picorabbit-draw/: mrbgem.rake
mrbgems/mruby-picorabbit-linebuffer/: mrbgem.rake
mrbgems/mruby-picorabbit-textbuf/: mrbgem.rake
mrblib/: main_task.rb
scripts/: convert_image.rb  rgb332.rb
src/: clock.c  draw.c  draw_text.c  dvi.c  frame_buffer.c  frame_buffer.h  framebuffer.c  line_buffer.c  linebuffer.c  main.c  picorabbit_linebuffer.c  text_renderer.c
tests/: CMakeLists.txt  main.c  test_draw.c  test_framebuffer.c
tests/mocks/: hardware_mock.c
(+15 files in other folders)
